...
          </>
        ) : null}

        {mode === 'email' && step === 'email' ? (
          <>
            <TextField
              testID="sign-in-email"
              label={t('Email')}
              value={email}
              onChangeText={setEmail}
              placeholder={t('you@company.com')}
              keyboardType="email-address"
              autoCapitalize="none"
...
